--- a/style.css
+++ b/style.css
@@ -61,5 +61,14 @@
 }
 
 input[type="radio"] {
-    display: none;
+    /*display: none;*/
+}
+
+#rock, #paper, #scissors {
+    font-size: 5em;
+    margin: 30px;
+}
+
+#rock:focus, #paper:focus, #scissors:focus {
+    border: solid 2px green;
 }
